Add sort and paginate
