# app/Http/Controllers/Controller.php
@@ -7,6 +7,27 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
+/**
+ * @OA\Parameter(
+ *   parameter="limit_query",
+ *   name="per_page",
+ *   description="Limit the number of results",
+ *   in="query",
+ *   @OA\Schema(
+ *     type="number", default=15
+ *   )
+ * ),
+ * @OA\Parameter(
+ *   parameter="sort_query",
+ *   name="sort",
+ *   description="Sort the result",
+ *   in="query",
+ *   @OA\Schema(
+ *     type="string", default="id"
+ *   )
+ * ),
+ */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
