# storage/api-docs/api-docs.json
@@ -44,6 +44,14 @@
                     "Roles"
                 ],
                 "summary": "Return roles list",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/limit_query"
+                    },
+                    {
+                        "$ref": "#/components/parameters/sort_query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Role list",
@@ -107,6 +115,26 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "parameters": {
+            "limit_query": {
+                "name": "per_page",
+                "in": "query",
+                "description": "Limit the number of results",
+                "schema": {
+                    "type": "number",
+                    "default": 15
+                }
+            },
+            "sort_query": {
+                "name": "sort",
+                "in": "query",
+                "description": "Sort the result",
+                "schema": {
+                    "type": "string",
+                    "default": "id"
+                }
             }
         }
     },
